2014-11-15  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (max2, min2): Use the less comparison function
	for generic semantics.

	* lib.h (max2, min2): Parameter names changed to avoid suggesting
	that the operands are numbers.

	* txr.1: Documentation for min and max updated.

2014-11-10  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (opip_s, oand_s, chain_s, chand_s): New global variables.
	(macro_form_p): Forward declaration added.
	(me_opip): New static function.
	(eval_init): Intern new symbols, register opip and oand macros
	to me_opip function. Use chain_s and chand_s in registration
	for chain and chand.

	* txr.1: Document opip and oand

	* tl.vim, txr.vim: Regenerated.

2014-11-06  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (sub, ref, refset, replace, update, search_list):
	Fix cut and paste problem: type_mismatch argument expression
	referring to the C function cons rather than the intended
	object seq.

2014-11-06  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register chand intrinsic.

	* lib.c (do_chand): New static function.
	(chandv): New function.

	* lib.h (chandv): Declared.

	* txr.1: Documented chand.

2014-11-06  Kaz Kylheku  <kaz@kylheku.com>

	Allow then-func to be omitted in iff. Cleanup.

	* eval.c (eval_init): Register iff as requiring only one arg.

	* lib.c (do_iff): Do not check thenfun for nil. Just call it.
	(iff): Default thenfun to identity.

	* txr.1: Documentation updated.

2014-11-05  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (iff): Bugfix: forgotten handling of default
	argument, resulting in : symbol being called as a function.

	* txr.1: Removing description of situation when the then-function
	argument of iff or iffi is specified as nil. This is deprecated
	behavior which can be obtained by using the false function.

2014-10-31  Kaz Kylheku  <kaz@kylheku.com>

	New macros tb and tc.

	* eval.c (me_tb, me_tc): New static functions.
	(eval_init): Registered tb and tc macros.

	* txr.1: Documented tb and tc.
